# PPP-Project

./: CMakeLists.txt  Linked_lists.c  Linked_lists.h  README.md  favs.txt  locais  locais.txt  main.c  registo  registo.txt
Funcoes/: Funcoes Favs.c  Funcoes Favs.h  Funcoes Locais-Pdi.c  Funcoes Locais-Pdi.h  Funcoes Registo.c  Funcoes Registo.h  Funcoes Viagem.c  Funcoes Viagem.h
Linked Lists/: Favs Lists.c  Favs Lists.h  Locais Fav Lists.c  Locais Fav Lists.h  Locais Lists.c  Locais Lists.h  PDI Favs Lists.c  PDI Favs Lists.h  PDI Lists.c  PDI Lists.h  Registo Lists.c  Registo Lists.h
teste/: CMakeLists.txt  main.c
