cmake_minimum_required(VERSION 3.14)
project(Trabalho_Final C)

set(CMAKE_C_STANDARD 90)

add_executable(Trabalho_Final main.c "Linked Lists/PDI Lists.c" "Linked Lists/PDI Lists.h" "Linked Lists/Locais Lists.c" "Linked Lists/Locais Lists.h" "Linked Lists/Registo Lists.c" "Linked Lists/Registo Lists.h" "Funcoes/Funcoes Locais-Pdi.c" "Funcoes/Funcoes Locais-Pdi.h" "Funcoes/Funcoes Registo.c" "Funcoes/Funcoes Registo.h" "Linked Lists/Favs Lists.c" "Linked Lists/Favs Lists.h" "Linked Lists/PDI Favs Lists.c" "Linked Lists/PDI Favs Lists.h" "Linked Lists/Locais Fav Lists.c" "Linked Lists/Locais Fav Lists.h" "Funcoes/Funcoes Favs.c" "Funcoes/Funcoes Favs.h" "Funcoes/Funcoes Viagem.c" "Funcoes/Funcoes Viagem.h")